tests/sksl/errors/DuplicateBuiltinFunction.glsl
### Compilation failed:

error: 1: '$pure' is not permitted here
$pure half cross_length_2d(half2,half2) {}
^^^^^
error: 1: function 'cross_length_2d' can exit without returning a value
$pure half cross_length_2d(half2,half2) {}
                                        ^^
2 errors
